--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,58 +1,22 @@
-/* .App {
-  text-align: center;
+* {
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 /*Modo claro*/
-.light-mode{
+/* .light-mode{
   background-color: #f2f2f2;
   color: #000;
   font-family: Arial, sans-serif;
-}
+} */
 
 /* Modo oscuro */
-.dark-mode{
+ body{
   background-color: #262626;
   color: whitesmoke;
-  margin: 0;
-  padding: 0;
   font-family: Arial, sans-serif;
-} 
+}
+
 /* Boton cambio de tema */
-.button {
+/* .button {
   background-color: transparent;
   border: none;
   color: #fff;
@@ -60,8 +24,8 @@
   position: absolute;
   top: 20px;
   right: 20px;
-}
-.button-icon {
+} */
+/* .button-icon {
   background-image: url("./images/oscuro.png"); 
   background-size: cover; 
   background-repeat: no-repeat;
@@ -80,7 +44,9 @@
   background-size: cover;
   width: 30px;
   height: 30px;
-}
+} */
+
+
 
 
 
