--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -23,9 +23,15 @@
   }
   
   .centerContent {
-    align-self: center;
+    height: 100%;
     text-align: center;
-    margin-top: -180px;
+    max-width: 800px; 
+    margin-left: auto; 
+    margin-right: auto;  
+    padding: 20px; 
+    padding-bottom: 50px;
+    padding-top: 100px;
+    font-size: 40px; 
   }
 
   
