--- a/src/views/Projects/Projects.module.css
+++ b/src/views/Projects/Projects.module.css
@@ -43,4 +43,10 @@
     font-family: 'Aharoni', sans-serif; 
     color:#127791
 }
+.deploy{
+    font-size: 25px;
+    font-family: 'Aharoni', sans-serif; 
+    color:#3fa9c4;
+    text-decoration: none;
+}
   
