--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -9,6 +9,7 @@
   }
 
   .header {
+    font-family: 'Aharoni', sans-serif;
     align-self: flex-start;
     text-align: left;
     margin: 0;
@@ -25,6 +26,7 @@
   .centerContent {
     height: 100%;
     text-align: center;
+    font-family: 'Aharoni', sans-serif;
     max-width: 800px; 
     margin-left: auto; 
     margin-right: auto;  
