--- a/src/views/Projects/Projects.module.css
+++ b/src/views/Projects/Projects.module.css
@@ -1,52 +1,109 @@
-.title{
-    font-size: 35px;
-    color: whitesmoke; 
-    font-family: 'Aharoni', sans-serif;
-    text-align: center;
-    margin-top: 10px;
+@media (min-width: 769px) {
+    .title {
+        font-size: 35px;
+        color: whitesmoke;
+        font-family: 'Aharoni', sans-serif;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .contenedor {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .contenedor>div {
+        width: calc(45% - 10px);
+        /* 50% del ancho - margen horizontal */
+        margin: 15px;
+        margin-bottom: 20px;
+        padding: 10px;
+        background-color: rgba(88, 64, 64, 0.3);
+        border: 1px solid #127791;
+        border-radius: 6px;
+        box-shadow: 3px 3px 3px 1px #127791;
+    }
+
+    .image {
+        max-width: 100%;
+        height: auto;
+        border-radius: 9px;
+    }
+
+    .image:hover {
+        transform: scale(1.1);
+        transition: all 0.3s;
+    }
+
+    .text {
+        font-family: 'Aharoni', sans-serif;
+        margin-top: 10px;
+    }
+
+    .technology {
+        font-size: 20px;
+        font-family: 'Aharoni', sans-serif;
+        color: #127791
+    }
+
+    .deploy {
+        font-size: 25px;
+        font-family: 'Aharoni', sans-serif;
+        color: #3fa9c4;
+        text-decoration: none;
+    }
 }
 
-.contenedor {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-  
-.contenedor > div {
-    width: calc(45% - 10px); /* 50% del ancho - margen horizontal */
-    margin: 15px;
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: rgba(88, 64, 64, 0.3);
-    border: 1px solid #127791;
-    border-radius: 6px;
-    box-shadow: 3px 3px 3px 1px #127791;
-}
-  
-.image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 9px;
-}
+@media (max-width: 768px) {
+    .title {
+        font-size: 50px;
+        color: whitesmoke;
+        font-family: 'Aharoni', sans-serif;
+        text-align: center;
+        margin-top: 10px;
+    }
 
-.image:hover{
-    transform: scale(1.1);
-    transition: all 0.3s;
-}
+    .contenedor {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 
-.text{
-    font-family: 'Aharoni', sans-serif; 
-    margin-top: 10px;
+    .contenedor>div {
+        width: calc(90% - 20px);
+        /* 50% del ancho - margen horizontal */
+        margin: 15px;
+        margin-bottom: 20px;
+        padding: 10px;
+        background-color: rgba(88, 64, 64, 0.3);
+        border: 1px solid #127791;
+        border-radius: 6px;
+        box-shadow: 3px 3px 3px 1px #127791;
+    }
+
+    .image {
+        max-width: 100%;
+        height: auto;
+        border-radius: 9px;
+    }
+
+    .text {
+        font-family: 'Aharoni', sans-serif;
+        margin-top: 10px;
+    }
+
+    .technology {
+        font-size: 20px;
+        font-family: 'Aharoni', sans-serif;
+        color: #127791
+    }
+
+    .deploy {
+        font-size: 25px;
+        font-family: 'Aharoni', sans-serif;
+        color: #3fa9c4;
+        text-decoration: none;
+    }
+
 }
-.technology{
-    font-size: 20px;
-    font-family: 'Aharoni', sans-serif; 
-    color:#127791
-}
-.deploy{
-    font-size: 25px;
-    font-family: 'Aharoni', sans-serif; 
-    color:#3fa9c4;
-    text-decoration: none;
-}
-  
