--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -1,4 +1,5 @@
-.container {
+@media (min-width: 769px) {
+  .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -15,25 +16,71 @@
     margin: 0;
     padding: 0;
   }
+
   .header h1 {
     font-size: 50px;
     margin: 0;
   }
+
   .header p {
     margin-top: 10px;
   }
-  
+
   .centerContent {
     height: 100%;
     text-align: center;
     font-family: 'Aharoni', sans-serif;
-    max-width: 800px; 
-    margin-left: auto; 
-    margin-right: auto;  
-    padding: 20px; 
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
     padding-bottom: 50px;
     padding-top: 100px;
-    font-size: 40px; 
+    font-size: 40px;
   }
 
-  
+}
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 25vh;
+    padding: 20px;
+    text-align: left;
+  }
+
+  .header {
+    font-family: 'Aharoni', sans-serif;
+    align-self:center;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  .header h1 {
+    font-size: 45px;
+    margin: 0;
+  }
+
+  .header p {
+    margin-top: 5px;
+    font-size: 25px;
+  }
+
+  .centerContent {
+    color: #127791;
+    height: 100%;
+    text-align: center;
+    font-family: 'Aharoni', sans-serif;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    padding-bottom: 50px;
+    padding-top: 100px;
+    font-size: 40px;
+  }
+}
